<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.GuideActivity"
    tools:showIn="@layout/activity_guide">

    <TextView
        android:id="@+id/tv_tips1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_tips_1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_tips1"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_want_to_create_ble_mesh"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_go_create_mesh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_tips1"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/go_create_new_mesh" />

    <TextView
        android:id="@+id/tv_tips2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/bt_go_create_mesh"
        android:layout_marginTop="16dp"
        android:text="@string/guide_tips_2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_go_join_mesh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_tips2"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/join_exits_mesh" />


</LinearLayout>
