<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beesmart.blemesh.activities.SyncDataActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tips_getKey"
        android:id="@+id/tips"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/et_input_key"
        android:textSize="20dp"
        android:gravity="center"
        android:maxLength="8"
        android:digits="@string/mesh_key_digits"
        android:inputType="textVisiblePassword"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/tips"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tips_sync_data"
        android:id="@+id/tips_2"
        android:layout_below="@+id/et_input_key"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Start receive database"
        android:id="@+id/bt_start_sync"
        android:layout_below="@+id/tips_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />


</RelativeLayout>
